--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+bower_components
+.DS_Store
 
 # Optional npm cache directory
 .npm
